Revision history for {{$dist->name}}

{{$NEXT}}

0.093450  2009-12-11 15:55:53 America/New_York
          fix a few more prereqs.  should be using AutoPrereq :-/

0.093420  2009-12-08 21:29:09 America/New_York
          fix a few more prereqs

0.093390  2009-12-05 08:45:24 America/New_York
          fix a few prereqs

0.093370  2009-12-03 20:40:10 America/New_York
          auto-create a test so that CPAN, etc, will not refuse install

0.093330  2009-11-29 11:45:00 America/New_York
          first release