@@ -6,7 +6,7 @@ copyright_holder = Ricardo Signes
 [@RJBS]
 
 [Prereq]
-Dist::Zilla = 1.093371
+Dist::Zilla = 2
 Dist::Zilla::Plugin::PodWeaver = 0
 Moose = 0
 Moose::Autobox = 0
